2001-07-05  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* glines.c (load_image): Fix typo.

2001-06-26  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* glines.c (load_image): Remove more useless code. Use a dialog
	  instead of a printf if we can't find the images. Also fix a ugly
	  check.
	  (set_selection), (set_selection1), (free_str), (fill_menu): This
	  stuff was doing some really nasty things.

2001-06-26  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* glines.c (load_properties): Remove pointless code.

2001-06-11  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	Apply part of a patch from drk@sgi.com

	* glines.c: (load_properties): Add void in the declaration.
	  (main): Correct the call to load_properties(), Remove c++ style
	  comment.

2001-05-30  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* glines.c (game_props_callback) Connect dialog to close signal
	  instead of delete_event.

2000-12-16  Ross Arnold  <rossa@inet.net.nz>

	* glines.c, glines.h: Added a preference to optionally increase 
		ball movement speed. 

2000-10-09  Szabolcs BAN <shooby@gnome.hu>

	* Corrected some spelling mistakes in user-guide.sgml. Thanks to Andras Timar (timar_a@freemail.hu)

2000-08-09  Szabolcs BAN <shooby@gnome.hu>

	* Added Help button to preferences window,
	committed new help (not to /configure.in)

2000-08-05  Szabolcs BAN <shooby@gnome.hu>

	* Started writing this ChangeLog.

2000-08-05  Szabolcs BAN <shooby@gnome.hu>

	* glines.c: added session managemnt support and the possibility to
	configure (via the settings dialog) the program's behaviour on quit.

2000-08-01  Szabolcs BAN <shooby@gnome.hu>

	* glines.c, glines.h: Added theme support (via the new settings
	dialog), changed ball.xpm to png: this way, it is easy to decide
        wether the picture is a ball or a background element (balls are png
        format, backgrounds are xpms).  Added some art files: black.xpm,
        gray.xpm, woody.xpm, marble,xpm, ball.png, classic.png, pulse.png,
        dots.png.
